Refactoring to use Java21 APIs.